UPDATE operationFinished